# frostgate-spear

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  frostgate-spear.md  pyproject.toml  requirements.txt
.github/workflows/: secure_build.yml
adversary_personas/: apt29_cozy_bear.json  generic_ransomware.json  schema.json
configs/: default.yaml  prometheus.yml  prometheus_alerts.yml
contracts/fgs-control-plane-contracts/: campaign.event.v1.schema.json  campaign.spec.v1.schema.json  canonical.scope.v1.schema.json  dossier.manifest.v1.schema.json  evidence.bundle.manifest.v1.schema.json  execution.permit.v1.schema.json  redaction.report.v1.schema.json  replay.protocol.v1.schema.json
docs/: Blueprint_Frost_Gate_Spear_v6.1_Showstopper.md  Blueprint_Frost_Gate_Spear_v6_gov_dod.md  KEY_MANAGEMENT.md  THREAT_MODEL.md
examples/: mission_envelope.json
examples/envelopes/: cui_internal_assessment.json  secret_apt_emulation.json  topsecret_insider_threat.json  unclass_external_pentest.json
examples/scenarios/: secret_apt29_emulation.json  unclass_perimeter_scan.json
fl_rings/: cui.yaml  unclass.yaml
integrity/: trust_store.json
mls_rings/: cui.yaml  secret.yaml  topsecret.yaml  unclass.yaml
policy/: abac_policy.rego  mls_policy.rego  policy_envelope.schema.json  roe_policy.rego  safety_constraints.rego  scope_lint.rego
sbom/provenance/: attestation.schema.json  sbom.schema.json
scenarios/: schema.json
scenarios/examples/: web_app_compromise.json
scripts/: init-db.sql  sign_opa_bundle.py
src/: __init__.py  cli.py
src/audit/: __init__.py
src/blue_box/: __init__.py
src/core/: __init__.py  config.py  engine.py  exceptions.py  mission.py
src/dossier/: __init__.py
src/entrypoint/: __init__.py
src/fl/: __init__.py  dpsgd.py
src/flight_recorder/: __init__.py
src/forensics/: __init__.py
src/governance/: __init__.py
src/integrity/: __init__.py
src/mls/: __init__.py
src/observability/: __init__.py
src/permits/: __init__.py
src/personas/: __init__.py
src/planner/: __init__.py
src/policy/: __init__.py  bundle_verify.py
src/policy_interpreter/: __init__.py
src/replay/: __init__.py
src/roe_engine/: __init__.py
src/rpc/: __init__.py
src/runtime_guard/: __init__.py
src/sandbox/: __init__.py
src/security/: __init__.py
src/sim/: __init__.py
src/target_safety/: __init__.py
src/tie/: __init__.py
src/tools/: __init__.py
src/validation/: __init__.py
src/verifier/: __init__.py
src/witness/: __init__.py
tests/: __init__.py  conftest.py  test_core.py  test_engine_guardrails.py  test_integration.py  test_permits.py  test_policy_bundle_signing.py
tests/compliance/: __init__.py  test_containers.py  test_fl_privacy.py  test_gates.py  (+4 more)
(+4 files in other folders)
